--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.9",
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.4",
